# tr-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.sh  docker-compose.yml  pyproject.toml  supervisord.conf  tr-agent.service
data/: candidate_pool.json
docs/: overview.html
src/tr_agent/: assets.py  config.py  guards.py  journal.py  main.py  market_regime.py  memory.py  news.py  notifier.py  risk.py  scheduler.py  screener.py  web.py  yf_utils.py
src/tr_agent/agent/: core.py  news_analyst.py  prompts.py  tools.py
src/tr_agent/broker/: base.py  paper.py  trade_republic.py
src/tr_agent/ml/: analyzer.py  auto_improve.py  dataset.py  features.py  kelly.py  signal_model.py  trainer.py
src/tr_agent/portfolio/: persistence.py  tracker.py
src/tr_agent/signals/: rules.py  technical.py
tests/: test_agent_prompts.py  test_assets.py  test_guards.py  test_journal.py  test_market_regime.py  test_ml_features.py  test_ml_model.py  test_ml_trainer.py  test_news.py  test_paper_broker.py  test_risk.py  test_screener.py  test_signals.py  test_tools.py
