[project]
name = "tr-agent"
version = "0.1.0"
description = "Local AI trading agent with Ollama + Trade Republic"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3",
    "langchain-ollama>=0.2",
    "langchain-community>=0.3",
    "yfinance>=0.2",
    "ta>=0.11",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "pytr>=0.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tr_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
