[project]
name = "tr-agent"
version = "0.2.0"
description = "Local AI trading agent with Ollama + Trade Republic"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.4",
    "yfinance>=0.2",
    "ta>=0.11",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "pytr>=0.1",
    "httpx>=0.27",
    "apscheduler>=3.10,<4",
    "pytz>=2024",
    "supervisor>=4.2",
    "lightgbm>=4.0",
    "scikit-learn>=1.4",
    "shap>=0.44",
    "pandas>=2.0",
    "numpy>=1.26",
    "flask>=3.1.3",
    "vadersentiment>=3.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
]
crypto = [
    "python-binance>=1.0.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tr_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
